--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,17 +3,18 @@ project:
   output-dir: docs
 
 website:
-  title: "masonposner.github.io"
+  title: "Mason Posner"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+      - publications.qmd
 
 format:
   html:
     theme:
-      - cosmo
+      - sketchy
       - brand
     css: styles.css
     toc: true
